Add all html elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,121 @@
     <title>Home Page</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <div class="img-container">
+                <p>Damian Buskens</p>
+            </div>
+            <div class="about-container">
+                <h1 class="about-title">About me</h1>
+                <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="icons">
+                    <svg></svg>
+                    <svg></svg>
+                    <svg></svg>
+                </div>
+            </div>
+        </div>
+    </header>
+    <body>
+        <h1 class="body-title">My work</h1>
+        <div class="projects-container">
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="img-container">
+                    <h1 class="temp">Screenshot Of Project</h1>
+                </div>
+                <div class="content">
+                    <div class="title-container">
+                        <h3 class="project-title">Project name</h3>
+                        <div class="icons"></div>
+                    </div>
+                    <p class="description">Short description of the project. Just a couple sentences will do.</p>
+                </div>
+            </div>
+        </div>
+    </body>
+    <footer>
+        <div class="footer-content">
+            <h1 class="contact">Contact me</h1>
+            <p>Please get in touch if you think our work could be mutually beneficial!</p>
+            <p>1234 Random Road Random Town, California 12345</p>
+            <div class="contact-container">
+                <div class="phone-container">
+                    <svg></svg>
+                    <p class="number">555-555-5555</p>
+                </div>
+                <div class="email-container">
+                    <svg></svg>
+                    <p class="email">damian@gmail.com</p>
+                </div>
+            </div>
+            <div class="icons">
+                <svg></svg>
+                <svg></svg>
+                <svg></svg>
+            </div>
+        </div>
+        <img src="" alt="">
+    </footer>
 </body>
 </html>
