--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="header-container">
-            <div class="img-container">
-                <p>Damian Buskens</p>
+            <div class="header-img-container">
+                <p>John Doe</p>
             </div>
             <div class="about-container">
                 <h1 class="about-title">About me</h1>
@@ -22,7 +23,7 @@
             </div>
         </div>
     </header>
-    <body>
+    <main>
         <h1 class="body-title">My work</h1>
         <div class="projects-container">
             <div class="project-card">
@@ -116,7 +117,7 @@
                 </div>
             </div>
         </div>
-    </body>
+    </main>
     <footer>
         <div class="footer-content">
             <h1 class="contact">Contact me</h1>
@@ -129,7 +130,7 @@
                 </div>
                 <div class="email-container">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>email</title><path d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" /></svg>
-                    <p class="email">damian@gmail.com</p>
+                    <p class="email">JohnDoe@gmail.com</p>
                 </div>
             </div>
             <div class="icons">
@@ -138,7 +139,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>twitter</title><path d="M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z" /></svg>
             </div>
         </div>
-        <img src="" alt="">
+        <img src="https://images.pexels.com/photos/927022/pexels-photo-927022.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
     </footer>
 </body>
 </html>
