--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <div class="header-img-container">
-                <p>John Doe</p>
+                
             </div>
             <div class="about-container">
                 <h1 class="about-title">About me</h1>
@@ -121,8 +121,8 @@
     <footer>
         <div class="footer-content">
             <h1 class="contact">Contact me</h1>
-            <p>Please get in touch if you think our work could be mutually beneficial!</p>
-            <p>1234 Random Road Random Town, California 12345</p>
+            <p>Please get in touch if you think our <br> work could be mutually beneficial!</p>
+            <p>1234 Random Road Random Town <br> California 12345</p>
             <div class="contact-container">
                 <div class="phone-container">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>phone</title><path d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg>
